[gd_scene load_steps=10 format=3 uid="uid://depd563y28yi7"]

[ext_resource type="Theme" uid="uid://dehvu01nlqvsf" path="res://textures/gui/themes/info_box_theme.tres" id="1_p05iw"]
[ext_resource type="PackedScene" uid="uid://dleye7m8gjxs0" path="res://gui/components/control_display_button.tscn" id="1_secn2"]
[ext_resource type="Script" uid="uid://d2s318j34ryoe" path="res://gui/confirm_menu.gd" id="1_uggh1"]

[sub_resource type="InputEventKey" id="InputEventKey_urlxi"]
device = -1
physical_keycode = 4194305

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_uh0os"]
device = -1
button_index = 1
pressed = true

[sub_resource type="Shortcut" id="Shortcut_p05iw"]
events = [SubResource("InputEventKey_urlxi"), SubResource("InputEventJoypadButton_uh0os")]

[sub_resource type="InputEventKey" id="InputEventKey_p05iw"]
device = -1
physical_keycode = 4194309

[sub_resource type="InputEventJoypadButton" id="InputEventJoypadButton_5k8yb"]
device = -1
button_index = 6
pressed = true

[sub_resource type="Shortcut" id="Shortcut_ms07u"]
events = [SubResource("InputEventKey_p05iw"), SubResource("InputEventJoypadButton_5k8yb")]

[node name="ConfirmMenu" type="PanelContainer"]
z_index = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -142.0
offset_top = -49.0
offset_right = 142.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p05iw")
script = ExtResource("1_uggh1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ConfirmLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirmation Text"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Cancel" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_secn2")]
layout_mode = 2
shortcut = SubResource("Shortcut_p05iw")
text = "No"
input_action_name = "menu_back"

[node name="Confirm" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_secn2")]
layout_mode = 2
shortcut = SubResource("Shortcut_ms07u")
text = "Yes"
input_action_name = "menu_confirm"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="cancel_confirmation"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Confirm" to="." method="confirm"]
